<resources>
    <string name="app_name">AbdelrahmanTealab_MAPD711_Project</string>
    <string name="welcome_to_tealab_s_online_pizza_delivery_app">Welcome to Tealab\'s online pizza delivery app</string>
    <string name="or">OR</string>
    <string name="register">register</string>
    <string name="login">Login</string>
    <string name="please_register_if_you_re_a_new_user">Please register if you\'re a new user</string>
    <string name="logo">Logo</string>
    <string name="create_an_account">Create a new account</string>
    <string name="full_name">Full name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="registerButton">Register</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="loginButton">login</string>
    <string name="login_as_admin">login as admin</string>
    <string name="description">By clicking the update button above, I hereby agree to and accept the following terms and conditions governing my use of Pizza Radar, which general terms and conditions are incorporated herein by reference.</string>
    <string name="meat_supreme">Meat Supreme</string>
    <string name="cheddar_supreme">Cheddar Supreme</string>
    <string name="super_hawaiian">Super Hawaiian</string>
    <string name="veggie">Veggie</string>
    <string name="mediterranean">Mediterranean</string>
    <string name="cheese">cheese</string>
    <string name="spanish_onions">spanish onions</string>
    <string name="black_olives">black olives</string>
    <string name="spinach">spinach</string>
    <string name="smoked_ham">smoked ham</string>
    <string name="green_pepper">green pepper</string>
    <string name="size_pizza_name">size pizza name</string>
    <string name="add_toppings_to_your">add toppings to your</string>
    <string name="check_out">check out</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="postal_code">Postal code</string>
    <string name="textview">TextView</string>
    <string name="search">search</string>
    <string name="customer_username">customer username</string>
    <string name="reset">reset</string>
    <string name="register_admin">register admin</string>
    <string name="bgmOnOff">off</string>
    <string name="mainScreenTitle">Select your city below !</string>
    <string name="north_york">North York</string>
    <string name="toronto_downtown">Toronto Downtown</string>
    <string name="scarborough">Scarborough</string>
    <string name="mississauga">Mississauga</string>
    <string name="oakville">Oakville</string>

    <string name="title_activity_maps">Map</string>
    <string name="switch_view">Switch View</string>
    <string name="satellite_view">Satellite View</string>
    <string name="normal_view">Normal View</string>
    <string name="bgm">BGM</string>
</resources>