<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/form_background_bg"
    tools:context=".Toppings">

    <TextView
        android:id="@+id/pizzaTitle3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/form_background_bg"
        android:backgroundTint="#D5D5D5"
        android:backgroundTintMode="src_atop"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/add_toppings_to_your"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pizzaTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/form_background_bg"
        android:backgroundTint="#D5D5D5"
        android:backgroundTintMode="src_atop"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/size_pizza_name"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizzaTitle3" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/checkOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizzaTitle"
        app:layout_constraintVertical_bias="0.09">

        <CheckBox
            android:id="@+id/cheese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/cheese"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/greenPepper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/green_pepper"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/smokedHam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/smoked_ham"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/spinach"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/spinach"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/blackOlives"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/black_olives"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/spanishOnions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/spanish_onions"
            android:textSize="24sp" />

    </LinearLayout>

    <Button
        android:id="@+id/checkOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@drawable/form_button_bg"
        android:fontFamily="sans-serif-medium"
        android:onClick="checkOutPressed"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:text="@string/check_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>