<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/meatSupreme"
        android:icon="@drawable/ic_baseline_menu_24"
        android:title="@string/meat_supreme"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/smallMeatSupreme"
                    android:title="small"></item>
                <item
                    android:id="@+id/mediumMeatSupreme"
                    android:title="medium"></item>
                <item
                    android:id="@+id/largeMeatSupreme"
                    android:title="large"></item>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/superHawaiian"
        android:icon="@drawable/ic_baseline_menu_24"
        android:title="@string/super_hawaiian"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/smallSuperHawaiian"
                    android:title="small"></item>
                <item
                    android:id="@+id/mediumSuperHawaiian"
                    android:title="medium"></item>
                <item
                    android:id="@+id/largeSuperHawaiian"
                    android:title="large"></item>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/veggie"
        android:icon="@drawable/ic_baseline_menu_24"
        android:title="@string/veggie"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/smallVeggie"
                    android:title="small"></item>
                <item
                    android:id="@+id/mediumVeggie"
                    android:title="medium"></item>
                <item
                    android:id="@+id/largeVeggie"
                    android:title="large"></item>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/mediterranean"
        android:icon="@drawable/ic_baseline_menu_24"
        android:title="@string/mediterranean"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/smallMediterranean"
                    android:title="small"></item>
                <item
                    android:id="@+id/mediumMediterranean"
                    android:title="medium"></item>
                <item
                    android:id="@+id/largeMediterranean"
                    android:title="large"></item>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/cheddarSupreme"
        android:icon="@drawable/ic_baseline_menu_24"
        android:title="@string/cheddar_supreme"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/smallCheddar"
                    android:title="small"></item>
                <item
                    android:id="@+id/mediumCheddar"
                    android:title="medium"></item>
                <item
                    android:id="@+id/largeCheddar"
                    android:title="large"></item>
            </group>
        </menu>
    </item>
</menu>