<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/form_background_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/create_an_account"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="normal"
                tools:layout_editor_absoluteY="129dp" />

        </LinearLayout>

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/form_edittext_bg"
            android:backgroundTint="#FFFFFF"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:elevation="5dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/radarGreen"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="608dp" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/form_edittext_bg"
            android:backgroundTint="#FFFFFF"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:elevation="5dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/radarGreen"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="608dp" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/form_edittext_bg"
            android:backgroundTint="#FFFFFF"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:elevation="5dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/radarGreen"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="618dp" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/form_edittext_bg"
            android:backgroundTint="#FFFFFF"
            android:drawableStart="@drawable/ic_baseline_location_on_24"
            android:elevation="5dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/address"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/radarGreen"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="618dp" />

        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/form_edittext_bg"
            android:backgroundTint="#FFFFFF"
            android:drawableStart="@drawable/ic_baseline_location_city_24"
            android:elevation="5dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/city"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/radarGreen"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="618dp" />

        <EditText
            android:id="@+id/postal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/form_edittext_bg"
            android:backgroundTint="#FFFFFF"
            android:drawableStart="@drawable/ic_baseline_location_city_24"
            android:elevation="5dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/postal_code"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/radarGreen"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="618dp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/form_edittext_bg"
            android:backgroundTint="#FFFFFF"
            android:drawableStart="@drawable/ic_baseline_mail_24"
            android:elevation="5dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/radarGreen"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="627dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/form_edittext_bg"
            android:backgroundTint="#FFFFFF"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:elevation="5dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/radarGreen"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="637dp" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/form_edittext_bg"
            android:backgroundTint="#FFFFFF"
            android:drawableStart="@drawable/ic_baseline_phone_android_24"
            android:elevation="5dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/radarGreen"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="647dp" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/form_button_bg"
            android:elevation="10dp"
            android:fontFamily="sans-serif-light"
            android:onClick="registerPressed"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/registerButton"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="652dp" />

        <Button
            android:id="@+id/registerAdminButton"
            android:layout_width="wrap_content"
            android:layout_height="20sp"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:foregroundGravity="center"
            android:gravity="center"
            android:onClick="registerAdminPressed"
            android:text="@string/register_admin"
            android:textAllCaps="false"
            android:textColor="@color/radarGreen"
            android:textSize="12sp" />

        <Button
            android:id="@+id/already_have_an_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:fontFamily="sans-serif-light"
            android:onClick="alreadyHaveAccountPressed"
            android:text="@string/already_have_an_account"
            android:textAllCaps="false"
            android:textColor="@color/radarGreen"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="700dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>