<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/form_background_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.7"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:minLines="1"
            android:text="@string/log_in_to_your_account"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="normal"
            app:autoSizeMaxTextSize="30sp"
            app:autoSizeMinTextSize="20sp"
            app:autoSizeTextType="uniform"
            tools:layout_editor_absoluteY="129dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="0.7"
            android:contentDescription="@string/logo"
            android:maxHeight="200dp"
            android:minWidth="100dp"
            android:minHeight="100dp"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.2"
            android:autofillHints=""
            android:background="@drawable/form_edittext_bg"
            android:backgroundTint="#FFFFFFFF"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:elevation="5dp"
            android:fontFamily="sans-serif-light"
            android:hint="Username"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/radarGreen"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="627dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.2"
            android:autofillHints=""
            android:background="@drawable/form_edittext_bg"
            android:backgroundTint="#FFFFFFFF"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:elevation="5dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="#118134"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="637dp" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_weight="0.2"
            android:background="@drawable/form_button_bg"
            android:elevation="10dp"
            android:fontFamily="sans-serif-light"
            android:onClick="loginPressed"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/loginButton"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="652dp" />

        <Button
            android:id="@+id/loginAsAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:background="#00FFFFFF"
            android:fontFamily="sans-serif-light"
            android:onClick="loginAsAdminPressed"
            android:text="@string/login_as_admin"
            android:textAlignment="viewEnd"
            android:textAllCaps="false"
            android:textColor="@color/radarGreen" />

        <Button
            android:id="@+id/need_a_new_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:background="#00FFFFFF"
            android:fontFamily="sans-serif-light"
            android:onClick="needAnewAccountPressed"
            android:text="Need a new account ?"
            android:textAlignment="viewEnd"
            android:textAllCaps="false"
            android:textColor="@color/radarGreen"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="700dp" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>